--- a/public/macOS.html
+++ b/public/macOS.html
@@ -138,6 +138,16 @@
             <div class="px-4 text-center">
                 <img class="d-block mx-auto im2" src="../images/login_page.png" alt="">
             </div>
+
+            <div>
+                <ul>
+                    <li class="lead"><a href = "https://support.parsec.app/hc/en-us/articles/4423444889997-Add-Remove-and-Manage-Friends">Einen Freund über die Seitenleiste hinzufügen</a> oder mit demselben Konto auf einem anderen Computer anmelden, der hosten kann, und dann auf dem lokalen macOS-Computer auf "Verbinden" klicken, um dem Host-Computer beizutreten</li>
+                </ul>
+            </div>
+
+            <div class="px-4 text-center">
+                <img class="d-block mx-auto im2" src="../images/mac_computers_tab.png" alt="">
+            </div>
         </section>
     </section>
     
