--- a/public/macOS.html
+++ b/public/macOS.html
@@ -66,7 +66,7 @@
                 <h3 class="text-body-emphasis">Inhaltsverzeichnis</h3>
                 <div class = "macOScontent">
                     <ul>
-                        <li class="lead">Anforderungen</li>
+                        <li class="lead"> <a href ="install">Anforderungen</a></li>
                         <li class="lead">Installation</li>
                         <li class="lead">Anmelden und Verbinden</li>
                         <li class="lead">Hosting auf macOS</li>
@@ -84,7 +84,7 @@
     
         <section class = "container mt-5 px-5">
             <div>
-                <h3 class="text-body-emphasis">Installation</h3>
+                <h3 class="text-body-emphasis install">Installation</h3>
                 <ul>
                     <li class="lead"><a href="https://parsec.app/downloads">MacOS-Installationsprogramm von der Download-Seite herunter laden</a></li>
                     <li class="lead">Installationsprogramm in Download-Ordner aufsuchenund doppelklicken, um es auszuführen</li>
@@ -138,7 +138,6 @@
             <div class="px-4 text-center">
                 <img class="d-block mx-auto im2" src="../images/login_page.png" alt="">
             </div>
-<<<<<<< HEAD
 
             <div>
                 <ul>
@@ -149,8 +148,6 @@
             <div class="px-4 text-center">
                 <img class="d-block mx-auto im2" src="../images/mac_computers_tab.png" alt="">
             </div>
-=======
->>>>>>> df059c84f513011699f9efcd213c6e9b620a8e01
         </section>
     </section>
     
