--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <style>
 
+    @media (max-width: 680px) {
+      .heroIMG1{
+        display: none;
+      }
+
+      .heroIMG2{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+      }
+    }
+
+    @media (min-width: 680px) {
+      .heroIMG2{
+        display: none;
+      }
+    }
+
+
   </style>
 </head>
 
@@ -22,9 +41,15 @@
         </header>
       </div>
 
-    <section class="hero">
+    <section class="hero1">
         <div class="px-4 py-5 my-5 text-center">
-            <img class="d-block mx-auto mb-4" src="./images/ParsecAUDEx.png" alt="" width="600">
+          <div class ="heroIMG1">
+            <img class="d-block mx-auto mb-2" src="./images/ParsecAUDEx.png" alt="" width="600">
+          </div>
+          <div class ="heroIMG2">
+            <img class="d-block mx-auto mb-2" src="./images/Parsec_Vertical_Logo_Light_Background.png" alt="" width="90%">
+            <img class="d-block mx-auto mb-5" src="./images/AUDEx_Logo.png" alt="" width="45%">
+          </div>
             <div class="col-lg-6 mx-auto">
               <p class="lead mb-4">Parsec ist eine Remotedesktoplösung und ermöglicht es zwei Clients direkt mit einander zu verbinden. </p>
             </div>
