--- a/public/macOS.html
+++ b/public/macOS.html
@@ -49,6 +49,7 @@
             <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="./macOS.html" class="nav-link active" aria-current="page">macOS</a></li>
             <li class="nav-item"><a href="./windows.html" class="nav-link">Windows</a></li>
+            <li class="nav-item"><a href="./AUDEx.html" class="nav-link">AUDEx</a></li>
           </ul>
         </header>
     </div>
