--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <li class="nav-item"><a href="./index.html" class="nav-link active" aria-current="page">Home</a></li>
             <li class="nav-item"><a href="./public/macOS.html" class="nav-link">macOS</a></li>
             <li class="nav-item"><a href="./public/windows.html" class="nav-link">Windows</a></li>
+            <li class="nav-item"><a href="./public/AUDEx.html" class="nav-link">AUDEx</a></li>
           </ul>
         </header>
       </div>
