--- a/public/AUDEx.html
+++ b/public/AUDEx.html
@@ -27,8 +27,8 @@
           <ul class="nav nav-pills">
             <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="./macOS.html" class="nav-link">macOS</a></li>
-            <li class="nav-item"><a href="./windows.html" class="nav-link active" aria-current="page">Windows</a></li>
-            <li class="nav-item"><a href="./AUDEx.html" class="nav-link">AUDEx</a></li>
+            <li class="nav-item"><a href="./windows.html" class="nav-link">Windows</a></li>
+            <li class="nav-item"><a href="./AUDEx.html" class="nav-link active" aria-current="page">AUDEx</a></li>
           </ul>
         </header>
       </div>
