--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
 
     <section class="hero1">
-        <div class="px-4 py-5 my-5 text-center">
+        <div class="px-4 py my text-center">
           <div class ="heroIMG1">
             <img class="d-block mx-auto mb-2" src="./images/ParsecAUDEx.png" alt="" width="600">
           </div>
