--- a/public/macOS.html
+++ b/public/macOS.html
@@ -28,7 +28,6 @@
         }
     }
 
-
     .table {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -67,9 +66,9 @@
                 <h3 class="text-body-emphasis">Inhaltsverzeichnis</h3>
                 <div class = "macOScontent">
                     <ul>
-                        <li class="lead"> <a href ="install">Anforderungen</a></li>
-                        <li class="lead">Installation</li>
-                        <li class="lead">Anmelden und Verbinden</li>
+                        <li class="lead"> <a href ="#anforderungen">Anforderungen</a></li>
+                        <li class="lead"><a href ="#installation">Installation</a></li>
+                        <li class="lead"><a href ="#anmelden">Anmelden und Verbinden</a></li>
                         <li class="lead">Hosting auf macOS</li>
                     </ul>
                 </div>
@@ -77,7 +76,7 @@
         </section>
     
         <section class = "container mt-5 px-5">
-            <h3 class="text-body-emphasis">Anforderungen</h3>
+            <h3 class="text-body-emphasis" id = "anforderungen">Anforderungen</h3>
             <p class="lead mb-4">Parsec ist für macOS 10.15 (Catalina) oder neuer verfügbar und erfordert Metal-Unterstützung. 
                 Parsec unterstützt keine Dateisysteme mit Berücksichtigung der Groß- und Kleinschreibung. Für das Hosting benötigt 
                 Parsec vorzugsweise auch 2019-Hardware oder neuere.</p>
@@ -85,7 +84,7 @@
     
         <section class = "container mt-5 px-5">
             <div>
-                <h3 class="text-body-emphasis install">Installation</h3>
+                <h3 class="text-body-emphasis install" id = "installation">Installation</h3>
                 <ul>
                     <li class="lead"><a href="https://parsec.app/downloads">MacOS-Installationsprogramm von der Download-Seite herunter laden</a></li>
                     <li class="lead">Installationsprogramm in Download-Ordner aufsuchenund doppelklicken, um es auszuführen</li>
@@ -129,7 +128,7 @@
 
         <section class = "container mt-5 px-5">
             <div>
-                <h3 class="text-body-emphasis im2">Anmelden und Verbinden</h3>
+                <h3 class="text-body-emphasis im2" id = "anmelden">Anmelden und Verbinden</h3>
                 <ul>
                     <li class="lead">Parsec starten</li>
                     <li class="lead">Anmelden oder ein <a href ="https://dash.parsec.app/signup/">Konto erstellen</a>, falls noch keins vorhanden</li>
