--- a/public/windows.html
+++ b/public/windows.html
@@ -7,9 +7,26 @@
   <title>Parsec Installation</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <style>
-    .Contents {
-        display: flex;
-        justify-content: center;
+
+   .content {
+        margin-left: 25%;
+        margin-right: 25%;
+
+    }
+
+    .im2 {
+        width: 75%;
+    }
+
+    @media (max-width: 1200px) {
+        .content {
+            margin-left: 0%;
+            margin-right: 0%;
+        }
+
+        .im2 {
+            width: 100%;
+        }
     }
 
     .table {
@@ -17,21 +34,147 @@
         grid-template-columns: 1fr 1fr;
     }
 
+    .line {
+        border-bottom: .8px solid #888;
+    }
+
 
   </style>
 </head>
 
 <body>
-    <div class="container">
-        <header class="d-flex justify-content-center py-3">
-          <ul class="nav nav-pills">
-            <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="./macOS.html" class="nav-link">macOS</a></li>
-            <li class="nav-item"><a href="./windows.html" class="nav-link active" aria-current="page">Windows</a></li>
-            <li class="nav-item"><a href="./AUDEx.html" class="nav-link">AUDEx</a></li>
-          </ul>
-        </header>
+  <div class="container">
+    <header class="d-flex justify-content-center py-3">
+      <ul class="nav nav-pills">
+        <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
+        <li class="nav-item"><a href="./macOS.html" class="nav-link">macOS</a></li>
+        <li class="nav-item"><a href="./windows.html" class="nav-link active" aria-current="page">Windows</a></li>
+        <li class="nav-item"><a href="./AUDEx.html" class="nav-link">AUDEx</a></li>
+      </ul>
+    </header>
+  </div>
+
+  <section class ="content">
+    <div class = "container mt-5 px-5">
+        <h1 class="display-5 fw-bold text-body-emphasis">Parsec App auf Windows installieren</h1>
+        <p>Installation und Grundkonfiguration der Parsec-App auf einem Computer mit Microsoft Windows.</p>
+        <hr class ="line">
+    </div>
+
+    <section class = "container mt-5 px-5">
+        <div>
+            <h3 class="text-body-emphasis">Inhaltsverzeichnis</h3>
+            <div class = "macOScontent">
+                <ul>
+                    <li class="lead"> <a href ="#anforderungen">Anforderungen</a></li>
+                    <li class="lead"><a href ="#installation">Installation</a></li>
+                    <li class="lead"><a href ="#anmelden">Anmelden und Verbinden</a></li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <section class = "container mt-5 px-5">
+        <h3 class="text-body-emphasis" id = "anforderungen">Anforderungen</h3>
+        <p class="lead mb-4">Parsec ist für Windows 10 oder neuer verfügbar. Abhängig davon, ob ein Computer beitreten oder er hosten 
+          soll, ist bestimmte Hardware erforderlich.</p>
+    </section>
+
+    <section class = "container mt-5 px-5">
+        <div>
+            <h3 class="text-body-emphasis install" id = "installation">Installation</h3>
+            <ul>
+                <li class="lead"><a href="https://parsec.app/downloads">Windows-Installationsprogramm von der Downloadseite herunter laden.</a></li>
+                <li class="lead">Installationsprogramm im Download-Ordner aufsuchen und doppelklicken, um es auszuführen</li>
+            </ul>
+        </div>
+
+        <div class="px-4 text-center">
+            <img class="d-block mx-auto mb-4" src="../images/downloads_folder_w.png" alt="" width="100%">
+        </div>
+
+        <div>
+            <ul>
+                <li class="lead mb-4">Zusätzlichen Komponenten auswählen, die installiert werden sollen und dann auf „Weiter“ 
+                  klicken.</li>
+            </ul>
+        </div>
+
+        <div class="px-4 text-center">
+            <img class="d-block mx-auto im2" src="../images/parsec_installer_choose_components.png" alt="">
+        </div>
+
+        <div>
+            <ul>
+                <li class="lead pt-4">Gewünschten Installationstyp auswählen und auf „Weiter“ klicken.</li>
+            </ul>
+        </div>
+
+        <div class="px-4 text-center">
+            <img class="d-block mx-auto im2" src="../images/parsec_installer_account_type.png" alt="">
+        </div>
+
+        <div>
+            <ul>
+                <li class="lead pt-4">Parsec beginnt mit der Installation, schließt das Installationsprogramm automatisch und öffnet die App, sobald die 
+                  Installation abgeschlossen wurde</li>
+            </ul>
+        </div>
+
+    </section>
+
+    <section class = "container mt-5 px-5">
+        <div>
+            <h3 class="text-body-emphasis im2" id = "anmelden">Anmelden und Verbinden</h3>
+            <ul>
+                <li class="lead">Parsec starten</li>
+                <li class="lead">Anmelden oder ein <a href ="https://dash.parsec.app/signup/">Konto erstellen</a>, falls noch keins vorhanden</li>
+            </ul>
+        </div>
+
+        <div class="px-4 text-center">
+            <img class="d-block mx-auto im2" src="../images/windows_parsec_login_screen.png" alt="">
+        </div>
+
+        <div>
+            <ul>
+                <li class="lead"><a href = "https://support.parsec.app/hc/en-us/articles/4423444889997-Add-Remove-and-Manage-Friends">Einen Freund über die Seitenleiste hinzufügen</a> oder mit demselben Konto auf einem anderen Computer anmelden, der hosten kann, und dann auf dem lokalen macOS-Computer auf "Verbinden" klicken, um dem Host-Computer beizutreten</li>
+            </ul>
+        </div>
+
+        <div class="px-4 text-center">
+            <img class="d-block mx-auto im2" src="../images/mac_computers_tab.png" alt="">
+        </div>
+    </section>
+
+    <section>
+        <div class="px-4 pb-5 pt-2 text-center">
+            <div class="col-lg-6 mx-auto">
+              <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                <a class="btn btn-primary" href = "./AUDEx.html" role = "button">Mit dem AUDEx Rechner Verbinden</a>
+              </div>
+            </div>
+          </div>
+    </section>
+</section>
+
+<div class="container">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <div class="col-md-4 d-flex align-items-center">
+        <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+          <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+        </a>
+        <span class="mb-3 mb-md-0 text-body-secondary">Nur im Rahmen des AUDEx Projektes verwenden</span>
       </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  
+      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+      </ul>
+    </footer>
+</div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
