--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <img class="d-block mx-auto mb-5" src="./images/AUDEx_Logo.png" alt="" width="45%">
           </div>
             <div class="col-lg-6 mx-auto">
-              <p class="lead mb-4">Parsec ist eine Remotedesktoplösung und ermöglicht es zwei Clients direkt mit einander zu verbinden. </p>
+              <p class="lead mb-4">Parsec ist eine Remote-Desktop Software, die es Nutzern ermöglicht es zwei Clients direkt mit einander zu verbinden. </p>
             </div>
           </div>
     </section>
