--- a/public/macOS.html
+++ b/public/macOS.html
@@ -150,7 +150,7 @@
         </section>
 
         <section>
-            <div class="px-4 pb-5 pt-2 text-center">
+            <div class="px-4 pb-5 pt-5 text-center">
                 <div class="col-lg-6 mx-auto">
                   <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                     <a class="btn btn-primary" href = "./AUDEx.html" role = "button">Mit dem AUDEx Rechner Verbinden</a>
@@ -166,7 +166,7 @@
             <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
               <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
             </a>
-            <span class="mb-3 mb-md-0 text-body-secondary">Nur im Rahmen des AUDEx Projektes verwenden</span>
+            <span class="mb-3 mb-md-0 text-body-secondary">Website nur im Rahmen des AUDEx Projektes verwenden im Rahmen des AUDEx Projektes verwenden</span>
           </div>
       
           <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
