--- a/public/windows.html
+++ b/public/windows.html
@@ -138,17 +138,18 @@
 
         <div>
             <ul>
-                <li class="lead"><a href = "https://support.parsec.app/hc/en-us/articles/4423444889997-Add-Remove-and-Manage-Friends">Einen Freund über die Seitenleiste hinzufügen</a> oder mit demselben Konto auf einem anderen Computer anmelden, der hosten kann, und dann auf dem lokalen macOS-Computer auf "Verbinden" klicken, um dem Host-Computer beizutreten</li>
+                <li class="lead pt-4"><a href = "https://support.parsec.app/hc/en-us/articles/4423444889997-Add-Remove-and-Manage-Friends">Einen Freund über die Seitenleiste hinzufügen</a> 
+                  oder mit demselben Konto auf einem anderen Computer anmelden, der hosten kann, und dann auf dem lokalen Windows-Computer auf „Verbinden“ klicken, um dem Host-Computer beizutreten.</li>
             </ul>
         </div>
 
         <div class="px-4 text-center">
-            <img class="d-block mx-auto im2" src="../images/mac_computers_tab.png" alt="">
+            <img class="d-block mx-auto im2" src="../images/windows_parsec_computers_tab.png" alt="">
         </div>
     </section>
 
     <section>
-        <div class="px-4 pb-5 pt-2 text-center">
+        <div class="px-4 pb-5 pt-5 text-center">
             <div class="col-lg-6 mx-auto">
               <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                 <a class="btn btn-primary" href = "./AUDEx.html" role = "button">Mit dem AUDEx Rechner Verbinden</a>
@@ -164,7 +165,7 @@
         <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
           <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
         </a>
-        <span class="mb-3 mb-md-0 text-body-secondary">Nur im Rahmen des AUDEx Projektes verwenden</span>
+        <span class="mb-3 mb-md-0 text-body-secondary">Website nur im Rahmen des AUDEx Projektes verwenden</span>
       </div>
   
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
