--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <li class="nav-item"><a href="./index.html" class="nav-link active" aria-current="page">Home</a></li>
             <li class="nav-item"><a href="./public/macOS.html" class="nav-link">macOS</a></li>
             <li class="nav-item"><a href="./public/windows.html" class="nav-link">Windows</a></li>
+            <li class="nav-item"><a href="./public/windows.html" class="nav-link">Web-App</a></li>
             <li class="nav-item"><a href="./public/AUDEx.html" class="nav-link">AUDEx</a></li>
           </ul>
         </header>
@@ -52,9 +53,52 @@
             <img class="d-block mx-auto mb-5" src="./images/AUDEx_Logo.png" alt="" width="45%">
           </div>
             <div class="col-lg-6 mx-auto">
-              <p class="lead mb-4">Parsec ist eine Remote-Desktop Software, die es Nutzern ermöglicht es zwei Clients direkt mit einander zu verbinden. </p>
+              <p class="lead mb-4">Parsec ist eine Remote-Desktop-Software, die es Nutzern ermöglicht ihren Computer fern zu steuern. Im Rahmen des AUDEx Projektes kann 
+                Parsec für das teleoperierte Steuern der AUDEx Fahrzeuge - von praktisch überall aus - verwendet werden. Hierfür fungiert der AUDEx Hauptrechner als "Host" und erlaubt nach absprache 
+                die externe Fernstueurung. Diese Website beschreibt das Vorgehen zur Installation der Parsec-Applikation unter verschiedenen Betriebssystemen sowie das Vrbinden zu dem AUDEx-Computer</p>
             </div>
           </div>
+    </section>
+
+    <section>
+      <div class="container px-4 py-5" id="featured-3">
+        <h2 class="pb-2 border-bottom">Columns with icons</h2>
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+          <div class="feature col">
+            <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
+              <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"></use></svg>
+            </div>
+            <h3 class="fs-2 text-body-emphasis">Featured title</h3>
+            <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+            <a href="#" class="icon-link">
+              Call to action
+              <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+            </a>
+          </div>
+          <div class="feature col">
+            <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
+              <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"></use></svg>
+            </div>
+            <h3 class="fs-2 text-body-emphasis">Featured title</h3>
+            <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+            <a href="#" class="icon-link">
+              Call to action
+              <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+            </a>
+          </div>
+          <div class="feature col">
+            <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
+              <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"></use></svg>
+            </div>
+            <h3 class="fs-2 text-body-emphasis">Featured title</h3>
+            <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+            <a href="#" class="icon-link">
+              Call to action
+              <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+            </a>
+          </div>
+        </div>
+      </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
