--- a/public/macOS.html
+++ b/public/macOS.html
@@ -28,13 +28,14 @@
         }
     }
 
-    .table {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-    }
-
     .line {
         border-bottom: .8px solid #888;
+    }
+
+    .icon-square {
+      width: 3rem;
+      height: 3rem;
+      border-radius: 0.75rem;
     }
 
 
@@ -48,6 +49,7 @@
             <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="./macOS.html" class="nav-link active" aria-current="page">macOS</a></li>
             <li class="nav-item"><a href="./windows.html" class="nav-link">Windows</a></li>
+            <li class="nav-item"><a href="./public/webapp.html" class="nav-link">Web-App</a></li>
             <li class="nav-item"><a href="./AUDEx.html" class="nav-link">AUDEx</a></li>
           </ul>
         </header>
@@ -166,7 +168,7 @@
             <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
               <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
             </a>
-            <span class="mb-3 mb-md-0 text-body-secondary">Website nur im Rahmen des AUDEx Projektes verwenden im Rahmen des AUDEx Projektes verwenden</span>
+            <span class="mb-3 mb-md-0 text-body-secondary">Website nur im Rahmen des AUDEx Projektes verwenden.</span>
           </div>
       
           <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
