--- a/public/windows.html
+++ b/public/windows.html
@@ -43,16 +43,19 @@
 </head>
 
 <body>
-  <div class="container">
-    <header class="d-flex justify-content-center py-3">
-      <ul class="nav nav-pills">
-        <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
-        <li class="nav-item"><a href="./macOS.html" class="nav-link">macOS</a></li>
-        <li class="nav-item"><a href="./windows.html" class="nav-link active" aria-current="page">Windows</a></li>
-        <li class="nav-item"><a href="./AUDEx.html" class="nav-link">AUDEx</a></li>
-      </ul>
-    </header>
-  </div>
+  <section>
+    <div class="container">
+      <header class="d-flex justify-content-center py-3">
+        <ul class="nav nav-pills">
+          <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="./macOS.html" class="nav-link">macOS</a></li>
+          <li class="nav-item"><a href="./windows.html" class="nav-link active" aria-current="page">Windows</a></li>
+          <li class="nav-item"><a href="./public/webapp.html" class="nav-link">Web-App</a></li>
+          <li class="nav-item"><a href="./AUDEx.html" class="nav-link">AUDEx</a></li>
+        </ul>
+      </header>
+    </div>
+  </section>
 
   <section class ="content">
     <div class = "container mt-5 px-5">
@@ -165,7 +168,7 @@
         <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
           <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
         </a>
-        <span class="mb-3 mb-md-0 text-body-secondary">Website nur im Rahmen des AUDEx Projektes verwenden</span>
+        <span class="mb-3 mb-md-0 text-body-secondary">Website nur im Rahmen des AUDEx Projektes verwenden.</span>
       </div>
   
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
