--- a/public/AUDEx.html
+++ b/public/AUDEx.html
@@ -17,6 +17,10 @@
         grid-template-columns: 1fr 1fr;
     }
 
+    a:link {
+      text-decoration:none;
+    }
+
 
   </style>
 </head>
@@ -28,6 +32,7 @@
             <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="./macOS.html" class="nav-link">macOS</a></li>
             <li class="nav-item"><a href="./windows.html" class="nav-link">Windows</a></li>
+            <li class="nav-item"><a href="./webapp.html" class="nav-link">Web-App</a></li>
             <li class="nav-item"><a href="./AUDEx.html" class="nav-link active" aria-current="page">AUDEx</a></li>
           </ul>
         </header>
