--- a/public/windows.html
+++ b/public/windows.html
@@ -11,7 +11,10 @@
    .content {
         margin-left: 25%;
         margin-right: 25%;
+    }
 
+    a:link {
+      text-decoration:none;
     }
 
     .im2 {
@@ -27,11 +30,6 @@
         .im2 {
             width: 100%;
         }
-    }
-
-    .table {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
     }
 
     .line {
@@ -50,7 +48,7 @@
           <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
           <li class="nav-item"><a href="./macOS.html" class="nav-link">macOS</a></li>
           <li class="nav-item"><a href="./windows.html" class="nav-link active" aria-current="page">Windows</a></li>
-          <li class="nav-item"><a href="./public/webapp.html" class="nav-link">Web-App</a></li>
+          <li class="nav-item"><a href="./webapp.html" class="nav-link">Web-App</a></li>
           <li class="nav-item"><a href="./AUDEx.html" class="nav-link">AUDEx</a></li>
         </ul>
       </header>
