--- a/public/webapp.html
+++ b/public/webapp.html
@@ -8,21 +8,38 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <style>
 
+    .content {
+        margin-left: 25%;
+        margin-right: 25%;
+    }
+
   </style>
 </head>
 
 <body>
-  <div class="container">
-    <header class="d-flex justify-content-center py-3">
-      <ul class="nav nav-pills">
-        <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
-        <li class="nav-item"><a href="./macOS.html" class="nav-link">macOS</a></li>
-        <li class="nav-item"><a href="./windows.html" class="nav-link">Windows</a></li>
-        <li class="nav-item"><a href="./webapp.html" class="nav-link active" aria-current="page">Web-App</a></li>
-        <li class="nav-item"><a href="./AUDEx.html" class="nav-link">AUDEx</a></li>
-      </ul>
-    </header>
-  </div>
+    <div class="container">
+        <header class="d-flex justify-content-center py-3">
+        <ul class="nav nav-pills">
+            <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="./macOS.html" class="nav-link">macOS</a></li>
+            <li class="nav-item"><a href="./windows.html" class="nav-link">Windows</a></li>
+            <li class="nav-item"><a href="./webapp.html" class="nav-link active" aria-current="page">Web-App</a></li>
+            <li class="nav-item"><a href="./AUDEx.html" class="nav-link">AUDEx</a></li>
+        </ul>
+        </header>
+    </div>
+
+    <section class ="content">
+        <div class = "container mt-5 px-5">
+            <h1 class="display-5 fw-bold text-body-emphasis">Web-App (Browser) verwenden</h1>
+            <p>Installation und Grundkonfiguration der Parsec-App auf einem Computer mit Microsoft Windows.</p>
+            <hr class ="line">
+        </div>
+
+        <section class = "container mt-5 px-5">
+            <p class="lead mb-4">Mit dem Parsec Web Client können Sie mit einem Google Chrome- oder Chromium-Browser auf Ihren Computer zugreifen, ohne die Parsec-Anwendung herunterladen zu müssen. Melden Sie sich entweder über die Parsec-Homepage an oder greifen Sie direkt auf web.parsec.app zu.</p>
+        </section>
+    </section>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
