--- a/public/AUDEx.html
+++ b/public/AUDEx.html
@@ -26,17 +26,26 @@
 </head>
 
 <body>
-    <div class="container">
-        <header class="d-flex justify-content-center py-3">
-          <ul class="nav nav-pills">
-            <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="./macOS.html" class="nav-link">macOS</a></li>
-            <li class="nav-item"><a href="./windows.html" class="nav-link">Windows</a></li>
-            <li class="nav-item"><a href="./webapp.html" class="nav-link">Web-App</a></li>
-            <li class="nav-item"><a href="./AUDEx.html" class="nav-link active" aria-current="page">AUDEx</a></li>
-          </ul>
-        </header>
+  <section>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img src = "../images/AUDEx_Logo.png" height = 50px></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" href="../index.html">Home</a>
+            <a class="nav-link" href="./macOS.html">macOS</a>
+            <a class="nav-link" href="./public/windows.html">Windows</a>
+            <a class="nav-link" href="./webapp.html">Web-App</a>
+            <a class="nav-link active"  aria-current="page"  href="./webapp.html">AUDEx</a>
+          </div>
+        </div>
       </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    </nav>
+  </section>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
