--- a/public/webapp.html
+++ b/public/webapp.html
@@ -13,6 +13,21 @@
         margin-right: 25%;
     }
 
+    a:link {
+      text-decoration:none;
+    }
+
+    @media (max-width: 1200px) {
+        .content {
+            margin-left: 0%;
+            margin-right: 0%;
+        }
+
+        .im2 {
+            width: 100%;
+        }
+    }
+
   </style>
 </head>
 
@@ -32,12 +47,13 @@
     <section class ="content">
         <div class = "container mt-5 px-5">
             <h1 class="display-5 fw-bold text-body-emphasis">Web-App (Browser) verwenden</h1>
-            <p>Installation und Grundkonfiguration der Parsec-App auf einem Computer mit Microsoft Windows.</p>
             <hr class ="line">
         </div>
 
         <section class = "container mt-5 px-5">
-            <p class="lead mb-4">Mit dem Parsec Web Client können Sie mit einem Google Chrome- oder Chromium-Browser auf Ihren Computer zugreifen, ohne die Parsec-Anwendung herunterladen zu müssen. Melden Sie sich entweder über die Parsec-Homepage an oder greifen Sie direkt auf web.parsec.app zu.</p>
+            <p class="lead mb-4">Druch den Parsec Web Client kann mit einem Google Chrome- oder Chromium-Browser auf 
+                einen weiteren Computer zugegriffen werden, ohne die Parsec-Anwendung herunterladen zu müssen. 
+                Hierfür Sie sich entweder über die Parsec-Homepage an oder greifen Sie direkt auf web.parsec.app zu.</p>
         </section>
     </section>
 
