--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
       .feat {
         flex-direction: column;
+        align-items: center;
       }
 
       .contfeat {
-        margin: 0% 20%;
         padding: 7% 0%
       }
     }
@@ -77,22 +77,32 @@
       border-radius: 0.75rem;
     }
 
+    a:link {
+      text-decoration:none;
+    }
+
   </style>
 </head>
 
 <body>
   <section>
-    <div class="container">
-        <header class="d-flex justify-content-center py-3">
-          <ul class="nav nav-pills">
-            <li class="nav-item"><a href="./index.html" class="nav-link active" aria-current="page">Home</a></li>
-            <li class="nav-item"><a href="./public/macOS.html" class="nav-link">macOS</a></li>
-            <li class="nav-item"><a href="./public/windows.html" class="nav-link">Windows</a></li>
-            <li class="nav-item"><a href="./public/webapp.html" class="nav-link">Web-App</a></li>
-            <li class="nav-item"><a href="./public/AUDEx.html" class="nav-link">AUDEx</a></li>
-          </ul>
-        </header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img src = "./images/AUDEx_Logo.png" height = 50px></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+            <a class="nav-link" href="./public/macOS.html">macOS</a>
+            <a class="nav-link" href="./public/windows.html">Windows</a>
+            <a class="nav-link" href="./public/webapp.html">Web-App</a>
+            <a class="nav-link" href="./public/webapp.html">AUDEx</a>
+          </div>
+        </div>
       </div>
+    </nav>
   </section>
 
   <section class="hero1">
