--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <a class="nav-link" href="./public/macOS.html">macOS</a>
             <a class="nav-link" href="./public/windows.html">Windows</a>
             <a class="nav-link" href="./public/webapp.html">Web-App</a>
-            <a class="nav-link" href="./public/webapp.html">AUDEx</a>
+            <a class="nav-link" href="./public/AUDEx.html">AUDEx</a>
           </div>
         </div>
       </div>
