--- a/public/macOS.html
+++ b/public/macOS.html
@@ -58,9 +58,9 @@
               <div class="navbar-nav">
                 <a class="nav-link" href="../index.html">Home</a>
                 <a class="nav-link active"  aria-current="page" href="./macOS.html">macOS</a>
-                <a class="nav-link" href="./public/windows.html">Windows</a>
+                <a class="nav-link" href="./windows.html">Windows</a>
                 <a class="nav-link" href="./webapp.html">Web-App</a>
-                <a class="nav-link" href="./webapp.html">AUDEx</a>
+                <a class="nav-link" href="./AUDEx.html">AUDEx</a>
               </div>
             </div>
           </div>
