--- a/public/windows.html
+++ b/public/windows.html
@@ -42,17 +42,23 @@
 
 <body>
   <section>
-    <div class="container">
-      <header class="d-flex justify-content-center py-3">
-        <ul class="nav nav-pills">
-          <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="./macOS.html" class="nav-link">macOS</a></li>
-          <li class="nav-item"><a href="./windows.html" class="nav-link active" aria-current="page">Windows</a></li>
-          <li class="nav-item"><a href="./webapp.html" class="nav-link">Web-App</a></li>
-          <li class="nav-item"><a href="./AUDEx.html" class="nav-link">AUDEx</a></li>
-        </ul>
-      </header>
-    </div>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img src = "../images/AUDEx_Logo.png" height = 50px></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" href="../index.html">Home</a>
+            <a class="nav-link" href="./macOS.html">macOS</a>
+            <a class="nav-link active"  aria-current="page" href="./windows.html">Windows</a>
+            <a class="nav-link" href="./webapp.html">Web-App</a>
+            <a class="nav-link" href="./AUDEx.html">AUDEx</a>
+          </div>
+        </div>
+      </div>
+    </nav>
   </section>
 
   <section class ="content">
