--- a/index.html
+++ b/index.html
@@ -81,14 +81,18 @@
       text-decoration:none;
     }
 
+    .hero1{
+        margin-top: 160px;
+    }
+
   </style>
 </head>
 
 <body>
   <section>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src = "./images/AUDEx_Logo.png" height = 50px></a>
+        <a class="navbar-brand" href="https://www.haw-hamburg.de/forschung/forschungsprojekte-detail/project/project/show/audex/"><img src = "./images/AUDEx_Logo.png" height = 50px></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
