--- a/public/macOS.html
+++ b/public/macOS.html
@@ -13,6 +13,10 @@
 
     }
 
+    .container1{
+        margin-top: 160px;
+    }
+
     a:link {
       text-decoration:none;
     }
@@ -48,9 +52,9 @@
 
 <body>
     <section>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar  fixed-top navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src = "../images/AUDEx_Logo.png" height = 50px></a>
+            <a class="navbar-brand" href="../index.html"><img src = "../images/AUDEx_Logo.png" height = 50px></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -68,7 +72,7 @@
       </section>
 
     <section class ="content">
-        <div class = "container mt-5 px-5">
+        <div class = "container container1 px-5">
             <h1 class="display-5 fw-bold text-body-emphasis">Parsec App auf macOS installieren</h1>
             <p>Installation und Grundkonfiguration der Parsec-App unter macOS.</p>
             <hr class ="line">
