--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
       .contfeat {
         padding: 7% 0%
       }
+
+      .hero1{
+        margin-top: 0px;
+      }
     }
 
     @media (min-width:981px) and (max-width:1080px){
@@ -82,7 +86,7 @@
     }
 
     .hero1{
-        margin-top: 160px;
+      margin-top: 140px;
     }
 
   </style>
@@ -90,19 +94,19 @@
 
 <body>
   <section>
-    <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="https://www.haw-hamburg.de/forschung/forschungsprojekte-detail/project/project/show/audex/"><img src = "./images/AUDEx_Logo.png" height = 50px></a>
+        <a class="navbar-brand px-5" href="https://www.haw-hamburg.de/forschung/forschungsprojekte-detail/project/project/show/audex/"><img src = "./images/AUDEx_Logo_SW.png" height = 29px></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-            <a class="nav-link" href="./public/macOS.html">macOS</a>
-            <a class="nav-link" href="./public/windows.html">Windows</a>
-            <a class="nav-link" href="./public/webapp.html">Web-App</a>
-            <a class="nav-link" href="./public/AUDEx.html">AUDEx</a>
+            <a class="nav-link px-3 active" aria-current="page" href="./index.html">Home</a>
+            <a class="nav-link px-3" href="./public/macOS.html">macOS</a>
+            <a class="nav-link px-3" href="./public/windows.html">Windows</a>
+            <a class="nav-link px-3" href="./public/webapp.html">Web-App</a>
+            <a class="nav-link px-3" href="./public/AUDEx.html">AUDEx</a>
           </div>
         </div>
       </div>
