--- a/public/macOS.html
+++ b/public/macOS.html
@@ -10,11 +10,7 @@
     .content {
         margin-left: 25%;
         margin-right: 25%;
-
-    }
-
-    .container1{
-        margin-top: 160px;
+        margin-top: 8%;
     }
 
     a:link {
@@ -52,7 +48,7 @@
 
 <body>
     <section>
-        <nav class="navbar  fixed-top navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar   navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
             <a class="navbar-brand" href="../index.html"><img src = "../images/AUDEx_Logo.png" height = 50px></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
