--- a/public/webapp.html
+++ b/public/webapp.html
@@ -11,6 +11,7 @@
     .content {
         margin-left: 25%;
         margin-right: 25%;
+        margin-top: 2%;
     }
 
     a:link {
@@ -35,7 +36,7 @@
     <section>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src = "../images/AUDEx_Logo.png" height = 50px></a>
+            <a class="navbar-brand" href="../index.html"><img src = "../images/AUDEx_Logo.png" height = 50px></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -61,8 +62,20 @@
         <section class = "container mt-5 px-5">
             <p class="lead mb-4">Druch den Parsec Web Client kann mit einem Google Chrome- oder Chromium-Browser auf 
                 einen weiteren Computer zugegriffen werden, ohne die Parsec-Anwendung herunterladen zu müssen. 
-                Hierfür Sie sich entweder über die Parsec-Homepage an oder greifen Sie direkt auf web.parsec.app zu.</p>
+                Über die Parsec-Homepage oder direkt auf <a href = "web.parsec.app">web.parsec.app</a> kann folgendes 
+                Fenster aufgerufen werden.</p>
         </section>
+
+        <div class="px-4 text-center">
+            <img class="d-block mx-auto mb-4" src="../images/web_computers_page.png" alt="" width="75%">
+        </div>
+
+        <section class = "container mt-5 px-5">
+            <p class="lead mb-4">Die Leistung und Stabilität des Webclients ist nicht so gut wie bei der herunterladbaren 
+                Version von Parsec. Wenn es zu Problemen wie, z. B. Verzögerungen oder Fehlern wie 6200 oder 3200X, empfpiehlt es
+                sich, Parsec für den Computer herunterzuladen. Der Beitritt zu macOS-Computern ist mit der Web-App derzeit nicht möglich.</p>
+        </section>
+
     </section>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
