--- a/public/windows.html
+++ b/public/windows.html
@@ -11,6 +11,8 @@
    .content {
         margin-left: 25%;
         margin-right: 25%;
+        margin-top: 2%;
+
     }
 
     a:link {
@@ -44,17 +46,17 @@
   <section>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src = "../images/AUDEx_Logo.png" height = 50px></a>
+        <a class="navbar-brand px-5" href="../index.html"><img src = "../images/AUDEx_Logo_SW.png" height = 29px></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="../index.html">Home</a>
-            <a class="nav-link" href="./macOS.html">macOS</a>
-            <a class="nav-link active"  aria-current="page" href="./windows.html">Windows</a>
-            <a class="nav-link" href="./webapp.html">Web-App</a>
-            <a class="nav-link" href="./AUDEx.html">AUDEx</a>
+            <a class="nav-link px-3" href="../index.html">Home</a>
+            <a class="nav-link px-3" href="./macOS.html">macOS</a>
+            <a class="nav-link px-3 active"  aria-current="page" href="./windows.html">Windows</a>
+            <a class="nav-link px-3" href="./webapp.html">Web-App</a>
+            <a class="nav-link px-3" href="./AUDEx.html">AUDEx</a>
           </div>
         </div>
       </div>
