--- a/public/macOS.html
+++ b/public/macOS.html
@@ -10,7 +10,7 @@
     .content {
         margin-left: 25%;
         margin-right: 25%;
-        margin-top: 8%;
+        margin-top: 2%;
     }
 
     a:link {
@@ -50,17 +50,17 @@
     <section>
         <nav class="navbar   navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html"><img src = "../images/AUDEx_Logo.png" height = 50px></a>
+            <a class="navbar-brand px-5" href="../index.html"><img src = "../images/AUDEx_Logo_SW.png" height = 29px></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-link" href="../index.html">Home</a>
-                <a class="nav-link active"  aria-current="page" href="./macOS.html">macOS</a>
-                <a class="nav-link" href="./windows.html">Windows</a>
-                <a class="nav-link" href="./webapp.html">Web-App</a>
-                <a class="nav-link" href="./AUDEx.html">AUDEx</a>
+                <a class="nav-link px-3" href="../index.html">Home</a>
+                <a class="nav-link px-3 active"  aria-current="page" href="./macOS.html">macOS</a>
+                <a class="nav-link px-3" href="./windows.html">Windows</a>
+                <a class="nav-link px-3" href="./webapp.html">Web-App</a>
+                <a class="nav-link px-3" href="./AUDEx.html">AUDEx</a>
               </div>
             </div>
           </div>
@@ -68,7 +68,7 @@
       </section>
 
     <section class ="content">
-        <div class = "container container1 px-5">
+        <div class = "container mt-5 px-5">
             <h1 class="display-5 fw-bold text-body-emphasis">Parsec App auf macOS installieren</h1>
             <p>Installation und Grundkonfiguration der Parsec-App unter macOS.</p>
             <hr class ="line">
