--- a/public/webapp.html
+++ b/public/webapp.html
@@ -36,17 +36,17 @@
     <section>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html"><img src = "../images/AUDEx_Logo.png" height = 50px></a>
+            <a class="navbar-brand px-5" href="../index.html"><img src = "../images/AUDEx_Logo_SW.png" height = 29px></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-link" href="../index.html">Home</a>
-                <a class="nav-link" href="./macOS.html">macOS</a>
-                <a class="nav-link" href="./windows.html">Windows</a>
-                <a class="nav-link active"  aria-current="page" href="./webapp.html">Web-App</a>
-                <a class="nav-link" href="./AUDEx.html">AUDEx</a>
+                <a class="nav-link px-3" href="../index.html">Home</a>
+                <a class="nav-link px-3" href="./macOS.html">macOS</a>
+                <a class="nav-link px-3" href="./windows.html">Windows</a>
+                <a class="nav-link px-3 active"  aria-current="page" href="./webapp.html">Web-App</a>
+                <a class="nav-link px-3" href="./AUDEx.html">AUDEx</a>
               </div>
             </div>
           </div>
@@ -75,6 +75,33 @@
                 Version von Parsec. Wenn es zu Problemen wie, z. B. Verzögerungen oder Fehlern wie 6200 oder 3200X, empfpiehlt es
                 sich, Parsec für den Computer herunterzuladen. Der Beitritt zu macOS-Computern ist mit der Web-App derzeit nicht möglich.</p>
         </section>
+
+        <section>
+            <div class="px-4 pb-5 pt-5 text-center">
+                <div class="col-lg-6 mx-auto">
+                  <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                    <a class="btn btn-primary" href = "./AUDEx.html" role = "button">Mit dem AUDEx Rechner Verbinden</a>
+                  </div>
+                </div>
+              </div>
+        </section>
+
+        <div class="container">
+            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+              <div class="col-md-4 d-flex align-items-center">
+                <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+                  <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+                </a>
+                <span class="mb-3 mb-md-0 text-body-secondary">Website nur im Rahmen des AUDEx Projektes verwenden.</span>
+              </div>
+          
+              <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+                <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
+                <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
+                <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+              </ul>
+            </footer>
+        </div>
 
     </section>
 
