--- a/index.html
+++ b/index.html
@@ -85,9 +85,6 @@
       text-decoration:none;
     }
 
-    .hero1{
-      margin-top: 140px;
-    }
 
   </style>
 </head>
@@ -114,7 +111,7 @@
   </section>
 
   <section class="hero1">
-      <div class="px-4 py my text-center">
+      <div class="px-4 my text-center">
         <div class ="heroIMG1">
           <img class="d-block mx-auto mb-2" src="./images/ParsecAUDEx.png" alt="" width="600">
         </div>
