--- a/public/AUDEx.html
+++ b/public/AUDEx.html
@@ -7,9 +7,10 @@
   <title>Parsec Installation</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <style>
-    .Contents {
+    .content {
         display: flex;
         justify-content: center;
+        margin-top: 2%;
     }
 
     .table {
@@ -27,19 +28,19 @@
 
 <body>
   <section>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar  navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src = "../images/AUDEx_Logo.png" height = 50px></a>
+        <a class="navbar-brand px-5" href="../index.html"><img src = "../images/AUDEx_Logo_SW.png" height = 29px></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="../index.html">Home</a>
-            <a class="nav-link" href="./macOS.html">macOS</a>
-            <a class="nav-link" href="./windows.html">Windows</a>
-            <a class="nav-link" href="./webapp.html">Web-App</a>
-            <a class="nav-link active"  aria-current="page"  href="./AUDEx.html">AUDEx</a>
+            <a class="nav-link px-3" href="../index.html">Home</a>
+            <a class="nav-link px-3" href="./macOS.html">macOS</a>
+            <a class="nav-link px-3" href="./windows.html">Windows</a>
+            <a class="nav-link px-3" href="./webapp.html">Web-App</a>
+            <a class="nav-link px-3 active"  aria-current="page"  href="./AUDEx.html">AUDEx</a>
           </div>
         </div>
       </div>
