--- a/public/AUDEx.html
+++ b/public/AUDEx.html
@@ -8,18 +8,24 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <style>
     .content {
-        display: flex;
-        justify-content: center;
+        margin-left: 25%;
+        margin-right: 25%;
         margin-top: 2%;
-    }
-
-    .table {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
     }
 
     a:link {
       text-decoration:none;
+    }
+
+    @media (max-width: 1200px) {
+        .content {
+            margin-left: 0%;
+            margin-right: 0%;
+        }
+
+        .im2 {
+            width: 100%;
+        }
     }
 
 
@@ -46,6 +52,58 @@
       </div>
     </nav>
   </section>
+
+  <section class ="content">
+      <div class = "container mt-5 px-5">
+          <h1 class="display-5 fw-bold text-body-emphasis">Web-App (Browser) verwenden</h1>
+          <hr class ="line">
+      </div>
+
+      <section class = "container mt-5 px-5">
+        <p class="lead mb-4">Druch den Parsec Web Client kann mit einem Google Chrome- oder Chromium-Browser auf 
+          einen weiteren Computer zugegriffen werden, ohne die Parsec-Anwendung herunterladen zu müssen. 
+          Über die Parsec-Homepage oder direkt auf <a href = "web.parsec.app">web.parsec.app</a> kann folgendes 
+          Fenster aufgerufen werden.</p>
+    </section>
+
+    <div class="px-4 text-center">
+        <img class="d-block mx-auto mb-4" src="../images/web_computers_page.png" alt="" width="75%">
+    </div>
+
+    <section class = "container mt-5 px-5">
+        <p class="lead mb-4">Die Leistung und Stabilität des Webclients ist nicht so gut wie bei der herunterladbaren 
+            Version von Parsec. Wenn es zu Problemen wie, z. B. Verzögerungen oder Fehlern wie 6200 oder 3200X, empfpiehlt es
+            sich, Parsec für den Computer herunterzuladen. Der Beitritt zu macOS-Computern ist mit der Web-App derzeit nicht möglich.</p>
+    </section>
+
+    <section>
+        <div class="px-4 pb-5 pt-5 text-center">
+            <div class="col-lg-6 mx-auto">
+              <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                <a class="btn btn-primary" href = "./AUDEx.html" role = "button">Mit dem AUDEx Rechner Verbinden</a>
+              </div>
+            </div>
+          </div>
+    </section>
+
+    <div class="container">
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+          <div class="col-md-4 d-flex align-items-center">
+            <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+              <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+            </a>
+            <span class="mb-3 mb-md-0 text-body-secondary">Website nur im Rahmen des AUDEx Projektes verwenden.</span>
+          </div>
+      
+          <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+            <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
+            <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
+            <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+          </ul>
+        </footer>
+    </div>
+  </section>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
