--- a/public/AUDEx.html
+++ b/public/AUDEx.html
@@ -55,7 +55,7 @@
 
   <section class ="content">
       <div class = "container mt-5 px-5">
-          <h1 class="display-5 fw-bold text-body-emphasis">Web-App (Browser) verwenden</h1>
+          <h1 class="display-5 fw-bold text-body-emphasis">Mit dem AUDEx Computer verbinden</h1>
           <hr class ="line">
       </div>
 
