--- a/public/webapp.html
+++ b/public/webapp.html
@@ -56,6 +56,7 @@
     <section class ="content">
         <div class = "container mt-5 px-5">
             <h1 class="display-5 fw-bold text-body-emphasis">Web-App (Browser) verwenden</h1>
+            <p>Fernsteurung eines Computers über die Parsec Web-Anwendung</p>
             <hr class ="line">
         </div>
 
