--- a/public/AUDEx.html
+++ b/public/AUDEx.html
@@ -60,31 +60,23 @@
       </div>
 
       <section class = "container mt-5 px-5">
-        <p class="lead mb-4">Druch den Parsec Web Client kann mit einem Google Chrome- oder Chromium-Browser auf 
-          einen weiteren Computer zugegriffen werden, ohne die Parsec-Anwendung herunterladen zu müssen. 
-          Über die Parsec-Homepage oder direkt auf <a href = "web.parsec.app">web.parsec.app</a> kann folgendes 
-          Fenster aufgerufen werden.</p>
+        <p class="lead mb-4">Die Parsec App oder den Web-Client öffnen und anmelden, dies kann eine Bestätigung per E-Mail erfordern. Um den AUDEx-Rechner in dem Reiter Computer zu sehen muss 
+          dieser zunächst als "Freund" hinzugefügt werden! Die entsprechende ID wir auf Anfrage herausgegeben.</p>
     </section>
 
     <div class="px-4 text-center">
-        <img class="d-block mx-auto mb-4" src="../images/web_computers_page.png" alt="" width="75%">
+        <img class="d-block mx-auto mb-4" src="../images/AUDEx_PS-1.png" alt="" width="80%">
+        <img class="d-block mx-auto mb-4" src="../images/AUDEx_PS-2.png" alt="" width="80%">
     </div>
 
     <section class = "container mt-5 px-5">
-        <p class="lead mb-4">Die Leistung und Stabilität des Webclients ist nicht so gut wie bei der herunterladbaren 
-            Version von Parsec. Wenn es zu Problemen wie, z. B. Verzögerungen oder Fehlern wie 6200 oder 3200X, empfpiehlt es
-            sich, Parsec für den Computer herunterzuladen. Der Beitritt zu macOS-Computern ist mit der Web-App derzeit nicht möglich.</p>
+        <p class="lead mb-4">Nun erscheint der AUDEx-Rechner in dem Reiter Computer und durch einen Klick auf Verbinden kann mit der Fernsteuerung begonnen werden!</p>
     </section>
 
-    <section>
-        <div class="px-4 pb-5 pt-5 text-center">
-            <div class="col-lg-6 mx-auto">
-              <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <a class="btn btn-primary" href = "./AUDEx.html" role = "button">Mit dem AUDEx Rechner Verbinden</a>
-              </div>
-            </div>
-          </div>
-    </section>
+    <div class="px-4 text-center">
+      <img class="d-block mx-auto mb-4" src="../images/AUDEx_PS-3.png" alt="" width="80%">
+
+  </div>
 
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
