--- a/public/AUDEx.html
+++ b/public/AUDEx.html
@@ -60,8 +60,8 @@
       </div>
 
       <section class = "container mt-5 px-5">
-        <p class="lead mb-4">Die Parsec App oder den Web-Client öffnen und anmelden, dies kann eine Bestätigung per E-Mail erfordern. Um den AUDEx-Rechner in dem Reiter Computer zu sehen muss 
-          dieser zunächst als "Freund" hinzugefügt werden! Die entsprechende ID wir auf Anfrage herausgegeben.</p>
+        <p class="lead mb-4">Die Parsec App oder den Web-Client öffnen und anmelden, dies kann eine Bestätigung per E-Mail erfordern. Um den AUDEx-Rechner in dem Reiter Computer zu sehen, muss 
+          dieser zunächst als "Freund" hinzugefügt werden! Die entsprechende ID wird auf Anfrage herausgegeben.</p>
     </section>
 
     <div class="px-4 text-center">
